Add all files for the User Page requirement in P5

--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>CIT Code Portfolio</title>
+</head>
+<body>
+
+  <header>
+    <div class="container">
+      <h1>jmalcom.github.io</h1>
+      <h2></h2>
+
+      <section>
+        <a href="https://github.com/jmalcom" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+      </section>
+    </div>
+  </header>
+
+  <div class="container">
+    <section id="main_content">
+      <h2>Demo CIT Code Portfolio Page</h2>
+
+      <img src="images/comp_sci.png" style="margin:.2em; padding:.2em; display:block;">
+
+      <h2><br>education.github.com</h2>
+      <p>We are using <a href="https://education.github.com/">Github's education service</a> to host student repos for webDev courses.</p>
+
+      <h2>UO CIT Minor</h2>
+      <p>The computer science department offers a Computer and Information Technology (CIT) minor, which emphasizes open-source technology and computing skills such as web development, networks, database programming and cloud computing. <a href="http://www.cs.uoregon.edu/Education/CIT_Minor.php">Read more  about the CIT minor at cs.uoregon.edu</a>.</p>
+
+      <h2>What the CIT Minor to Me</h2>
+      <p>The CIT Minor started with an Introdction to JavaScipt where we learned the basics. Arrays, objects, functions, boolean, Document.querySelector, etc. were a few of the concepts we learned in the course. It was a great introduction computer programming and made me excited to learn more.</p>
+      <p>Then I took Introduction to Multimedia Programming, where we used Javascript with Google Maps API, canvas, and local storage to create awesome web apps that did cool things</p>
+      <p>CIT 281 was a great class to have before getting into the upper divison courses as it exposed me to many new concepts like React, Git, and Node to name a few. I'm excited for the next sequence of the CIT Minor.</p>
+
+
+      <h2>CIT Courses & Content</h2>
+
+      <ul>
+        <li>CIS 111: WebDev w/JavaScipt (ES6)</li>
+        <li>CIS 115: Multimedia Programming</li>
+        <li>CIT 281: Unix Shell; Git & Github; jQuery; AJAX (fetch & promises); Node & Express; ES6 Classes & Super; React; Github Pages </li>
+        <li>CIT 381: Relational Databases</li>
+        <li>CIT 382: WebDev Frameworks (Meteor & React)</li>
+        <li>CIT 383: Networks & CyberSecurity</li>
+      </ul>
+
+      <h2>My CIT Projects</h2>
+      <ul>
+        <li><a href="http://pages.uoregon.edu/jmalcom/111/">CIS 111 Projects</a> (uoregon.edu)</li>
+        <li>CIS 115 Projects (Github)</li>
+        <li>CIT 281 Projects
+          <ul>
+            <li>P1 Project Page (Github)</li>
+            <li>P2 Project Page (Github)</li>
+            <li>P3 Project Page (Github)</li>
+            <li><a href="https://uo-cit.github.io/project-4-jmalcom/">P4 Project Page</a> (Github)</li>
+            <li>P5 Project Page (Github)</li>
+          </ul>
+        </li>
+        <li>CIT 381 Projects</li>
+        <li>CIT 382 Projects</li>
+        <li>CIT 383 Projects</li>
+      </ul>
+
+    </section>
+  </div>
+
+</body>
+</html>
