Add some more functionality

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
       <h2>My CIT Projects</h2>
       <ul>
         <li><a href="http://pages.uoregon.edu/jmalcom/111/">CIS 111 Projects</a> (uoregon.edu)</li>
-        <li>CIS 115 Projects (Github)</li>
+        <li>CIS 115 Projects (Coming soon to GitHub)</li>
         <li>CIT 281 Projects
           <ul>
-            <li>P1 Project Page (Github)</li>
-            <li>P2 Project Page (Github)</li>
-            <li>P3 Project Page (Github)</li>
-            <li><a href="https://uo-cit.github.io/project-4-jmalcom/">P4 Project Page</a> (Github)</li>
-            <li>P5 Project Page (Github)</li>
+            <li>P1 Project Page (Coming soon to GitHub)</li>
+            <li>P2 Project Page (Coming soon to GitHub)</li>
+            <li><a href="https://github.com/UO-CIT/project-3-jmalcom">P3 Project Page (Link to its repo)</a></li>
+            <li><a href="https://uo-cit.github.io/project-4-jmalcom/">P4 Project Page (Req. in Step A)</a> (Github)</li>
+            <li>P5 Project Page (Coming soon to GitHub)</li>
           </ul>
         </li>
         <li>CIT 381 Projects</li>
